--- a/index26_text_html_move.html
+++ b/index26_text_html_move.html
@@ -1,54 +1,49 @@
 <html>
     <head>
         <style type="text/css">
-            @import url("https://webgl2fundamentals.org/webgl/resources/webgl-tutorials.css");
-            body {
-                margin: 0;
-            }
-            canvas {
-                width: 100vw;
-                height: 100vh;
-                display: block;
-            }
             .container {
                 position: relative;
+                overflow: none;
             }
-            #overlay {
+
+            #divcontainer {
                 position: absolute;
-                left: 10px;
-                top: 10px;
-                background-color: rgba(0, 0, 0, 0.7);
-                color: white;
-                font-family: monospace;
-                padding: 1em;
-                border-radius: 1em;
-                border: 2px solid #f00;
-                text-shadow: 0px 0px 5px white;
+                left: 0px;
+                top: 0px;
+                width: 400px;
+                height: 300px;
+                z-index: 10;
+                overflow: hidden;
+            }
+
+            .floating-div {
+                position: absolute;
             }
         </style>
     </head>
     <body>
         <div class="container">
             <canvas id="canvas" width="400" height="300"></canvas>
-            <div id="overlay">
-                <div>Time: <span id="time"></span></div>
-                <div>Angle: <span id="angle"></span></div>
-            </div>
+            <div id="divcontainer"></div>
         </div>
         <script src="./buildin.js"></script>
         <script src="./m4.js"></script>
         <script>
-            // 找到需要用到的元素
-            var timeElement = document.querySelector("#time");
-            var angleElement = document.querySelector("#angle");
+            // 找到 divcontainer
+            var divContainerElement = document.querySelector("#divcontainer");
 
-            // 创建文字节点为浏览器节省一些时间
-            var timeNode = document.createTextNode("");
-            var angleNode = document.createTextNode("");
+            // 创建 div
+            var div = document.createElement("div");
 
-            // 将文字节点放入需要的地方
-            timeElement.appendChild(timeNode);
-            angleElement.appendChild(angleNode);
+            // 设置 CSS 类
+            div.className = "floating-div";
+
+            // 创建一个文字节点作为内容
+            var textNode = document.createTextNode("");
+            div.appendChild(textNode);
+
+            // 加到 divcontainer 里
+            divContainerElement.appendChild(div);
 
             ("use strict");
 
@@ -97,10 +92,6 @@ void main() {
                 if (!gl) {
                     return;
                 }
-
-                // look up the elements we want to affect
-                var timeElement = document.querySelector("#time");
-                var angleElement = document.querySelector("#angle");
 
                 // Use our boilerplate utils to compile the shaders and link into a program
                 var vertexShader = createShader(gl, gl.VERTEX_SHADER, vertexShaderSource);
@@ -169,6 +160,10 @@ void main() {
                 var fieldOfViewRadians = degToRad(60);
                 var rotationSpeed = 1.2;
                 var then = 0;
+                var x = 0;
+                var y = 0;
+                var dx = 4;
+                var dy = 4;
 
                 requestAnimationFrame(drawScene);
 
@@ -189,9 +184,18 @@ void main() {
                     // only report 0 - 360
                     angle = angle % 360;
 
-                    // set the text
-                    angleElement.textContent = angle.toFixed(0); // no decimal place
-                    timeNode.nodeValue = now.toFixed(2);
+                    x += dx;
+                    y += dy;
+                    if (x < 0 || x > gl.canvas.width) {
+                        dx = -dx;
+                    }
+                    if (y < 0 || y > gl.canvas.height) {
+                        dy = -dy;
+                    }
+
+                    div.style.left = Math.floor(x) + "px";
+                    div.style.top = Math.floor(y) + "px";
+                    textNode.nodeValue = now.toFixed(2);
 
                     // Tell WebGL how to convert from clip space to pixels
                     gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
